# DerpsCubedAPI

./: Dockerfile  README.md  Run.cmd  config.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.in  requirements.txt  shell.py
.github/workflows/: docker-release.yml
alembic/: env.py
alembic/versions/: 06c42347c19f_.py  09f7902d1cb2_.py  0e13acd03419_.py  121388f9fa23_.py  14ae3697354b_.py  17ac4ef7449e_.py  1adc9ab5aff6_.py  1dffd6320d12_.py  21873e9aaa2c_.py  2461ba3232b8_.py  2910ac58de96_.py  342d24aeaf4b_.py  3b7c806aec24_.py  401440d821ca_.py  462d0f0e5222_.py  485af3ef3edf_.py  4973ccee48f0_.py  49a4bdc7b3c2_.py  4a2e376df78a_.py  4bd839f8975e_.py  500443f2a44b_.py  50408e371734_.py  5247875424a2_.py  5723f475c08a_.py  5d7c281566ce_.py  61f0b29b04a2_.py  6b43beb562d0_.py  6c6735b18710_.py  6d4fe6f507f4_.py  6dc5caca0476_.py  70ed1cd33603_.py  7897162b89ce_.py  79a52ebed388_.py  7a106463b524_.py  7c75580cd45b_.py  8418e7fd3fca_.py  84fb89ac9daf_.py  85aefc28ea1a_.py  8f44eb4da49a_.py  939985a3b4d3_.py  (+29 more)
auth/: security.py  utilities.py
core/: auth.py  config.py
database/: models.py
routers/: auth.py  economy.py  games.py  servers.py  users.py
schemas/: auth.py  database.py  economy.py  games.py  servers.py  users.py
services/: economy.py  games.py  servers.py  storage.py  users.py
