[project]
name = "derpscubedapi"
version = "0.0.3"
description = "An API for various services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic",
    "annotated-types",
    "anyio",
    "apscheduler",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "asttokens",
    "authlib",
    "beanie",
    "boto3",
    "boto3-stubs",
    "botocore",
    "botocore-stubs",
    "build",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "colorama",
    "cryptography",
    "decorator",
    "deprecated",
    "dnspython",
    "email-validator",
    "executing",
    "fastapi",
    "fastapi-cli",
    "fastapi-cloud-cli",
    "fastapi-filter",
    "fastapi-pagination",
    "greenlet",
    "h11",
    "httpcore",
    "httptools",
    "httpx",
    "idna",
    "ipython",
    "ipython-pygments-lexers",
    "jedi",
    "jinja2",
    "jmespath",
    "lazy-model",
    "limits",
    "mako",
    "markdown-it-py",
    "markupsafe",
    "matplotlib-inline",
    "mdurl",
    "mongoengine",
    "motor",
    "mypy-boto3-cloudformation",
    "mypy-boto3-dynamodb",
    "mypy-boto3-ec2",
    "mypy-boto3-s3",
    "mysql-connector-python",
    "numpy",
    "packaging",
    "parso",
    "pexpect",
    "pillow",
    "pip-tools",
    "prompt-toolkit",
    "ptyprocess",
    "pure-eval",
    "pycparser",
    "pydantic-core",
    "pydantic-settings",
    "pydantic[email]",
    "pygments",
    "pyjwt",
    "pymongo",
    "pyproject-hooks",
    "python-dateutil",
    "python-dotenv",
    "python-multipart",
    "pyyaml",
    "requests",
    "rich",
    "rich-toolkit",
    "rignore",
    "s3transfer",
    "scipy",
    "sentry-sdk",
    "shellingham",
    "six",
    "slowapi",
    "sniffio",
    "sqlalchemy",
    "sqlmodel",
    "stack-data",
    "starlette",
    "toml",
    "traitlets",
    "typer",
    "types-awscrt",
    "types-s3transfer",
    "typing-extensions",
    "typing-inspection",
    "tzdata",
    "tzlocal",
    "urllib3",
    "uvicorn[standard]",
    "uvloop",
    "validators",
    "watchfiles",
    "wcwidth",
    "websockets",
    "wheel",
    "wrapt",
]
