[project]
name = "derpscubedapi"
version = "0.0.3"
description = "An API for various services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic",
    "annotated-types",
    "anyio",
    "apscheduler",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "authlib",
    "beanie",
    "boto3",
    "botocore",
    "certifi",
    "cffi",
    "charset-normalizer",
    "colorama",
    "cryptography",
    "decorator",
    "deprecated",
    "dnspython",
    "email-validator",
    "fastapi",
    "fastapi-filter",
    "fastapi-pagination",
    "greenlet",
    "h11",
    "httpcore",
    "httptools",
    "httpx",
    "idna",
    "jmespath",
    "lazy-model",
    "limits",
    "mako",
    "markdown-it-py",
    "markupsafe",
    "mdurl",
    "mongoengine",
    "motor",
    "mysql-connector-python",
    "numpy",
    "pillow",
    "pycparser",
    "pydantic-core",
    "pydantic-settings",
    "pydantic[email]",
    "pyjwt",
    "pymongo",
    "python-dateutil",
    "python-dotenv",
    "python-multipart",
    "pyyaml",
    "requests",
    "rignore",
    "s3transfer",
    "sentry-sdk",
    "six",
    "slowapi",
    "sniffio",
    "sqlalchemy",
    "sqlmodel",
    "starlette",
    "toml",
    "typing-extensions",
    "typing-inspection",
    "tzdata",
    "tzlocal",
    "urllib3",
    "uvicorn",
    "uvloop",
    "validators",
    "watchfiles",
    "websockets",
    "wrapt",
]

[project.optional-dependencies]
dev = [
    "asttokens",
    "boto3-stubs",
    "botocore-stubs",
    "build",
    "click",
    "executing",
    "fastapi-cli",
    "fastapi-cloud-cli",
    "ipython",
    "ipython-pygments-lexers",
    "jedi",
    "matplotlib-inline",
    "mypy-boto3-cloudformation",
    "mypy-boto3-dynamodb",
    "mypy-boto3-ec2",
    "mypy-boto3-s3",
    "packaging",
    "parso",
    "pexpect",
    "prompt-toolkit",
    "ptyprocess",
    "pure-eval",
    "pygments",
    "pyproject-hooks",
    "rich",
    "rich-toolkit",
    "shellingham",
    "stack-data",
    "traitlets",
    "types-awscrt",
    "types-s3transfer",
    "typer",
    "wcwidth",
    "wheel",
]
